# rpi-screen-service

./: .gitignore  Cargo.toml  README.md  build.rs  log4rs_config.yml
benches/: service_benchmark.rs
proto/: config.proto  screen_service.proto
src/: cli-client.rs  cli_client.rs  config_extractor.rs  data_updater.rs  dummy_client.rs  exponential_backoff.rs  gcal_updater.rs  kitty_updater.rs  main.rs  my_screen_service.rs  rpi-client.rs  rpi_client.rs  server.rs  transport_updater.rs
