[package]
name = "modular-apis-test"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the gRPC server
name = "screen-server"
path = "src/server.rs"

[[bin]] # Bin to run the simple CLI gRPC client
name = "screen-cli-client"
path = "src/cli-client.rs"

[[bin]] # Bin to run the actual Raspi client
name = "screen-rpi-client"
path = "src/rpi-client.rs"

[dependencies]
chrono = "0.4"
clap = "4.5"
prost = "0.12"
prost-types = "0.12"
pbjson = "0.6"
pbjson-types = "0.6"
serde = "1.0"
serde_json = "1.0"
tonic = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
prost-build = "0.12"
pbjson-build = "0.6"
tonic-build = "0.11"
