[package]
name = "rpi-screen-service"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the gRPC server
name = "screen-server"
path = "src/server.rs"
required-features = ["server"]

[[bin]] # Bin to run the simple CLI gRPC client
name = "screen-cli-client"
path = "src/cli_client.rs"

[[bin]] # Bin to run the actual Raspi client
name = "screen-rpi-client"
path = "src/rpi_client.rs"

[dependencies]
chrono = {version = "0.4", optional = true}
clap = "4.5"
log = "0.4"
log4rs = "1.3"
prost = "0.12"
prost-types = "0.12"
pbjson = "0.6"
pbjson-types = "0.6"
reqwest = {version = "0.12", optional = true}
scraper = {version = "0.19", optional = true}
serde = "1.0"
serde_json = "1.0"
tonic = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[features]
server = ["dep:chrono", "dep:reqwest", "dep:scraper", "log4rs/rolling_file_appender"]

[build-dependencies]
prost-build = "0.12"
pbjson-build = "0.6"
tonic-build = "0.11"
